practice3/k8s/deployment-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: uptime-monitor
  labels:
    app: api-gateway
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: uptime-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/part-of: uptime-monitor
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:0.1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
