practice3/k8s/deployment-checker-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checker-worker
  namespace: uptime-monitor
  labels:
    app: checker-worker
    app.kubernetes.io/name: checker-worker
    app.kubernetes.io/part-of: uptime-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checker-worker
  template:
    metadata:
      labels:
        app: checker-worker
        app.kubernetes.io/name: checker-worker
        app.kubernetes.io/part-of: uptime-monitor
    spec:
      containers:
        - name: checker-worker
          image: checker-worker:0.1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8001
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
