practice3/k8s/deployment-notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  namespace: uptime-monitor
  labels:
    app: notifier
    app.kubernetes.io/name: notifier
    app.kubernetes.io/part-of: uptime-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
        app.kubernetes.io/name: notifier
        app.kubernetes.io/part-of: uptime-monitor
    spec:
      containers:
        - name: notifier
          image: notifier:0.1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8002
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
