practice3/k8s/service-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: uptime-monitor
  labels:
    app: api-gateway
    app.kubernetes.io/name: api-gateway
    release: monitoring
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8000
      targetPort: http
