practice3/k8s/service-checker-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: checker-worker
  namespace: uptime-monitor
  labels:
    app: checker-worker
    app.kubernetes.io/name: checker-worker
    release: monitoring
spec:
  selector:
    app: checker-worker
  ports:
    - name: http
      port: 8001
      targetPort: http
