practice3/k8s/service-notifier.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifier
  namespace: uptime-monitor
  labels:
    app: notifier
    app.kubernetes.io/name: notifier
    release: monitoring
spec:
  selector:
    app: notifier
  ports:
    - name: http
      port: 8002
      targetPort: http
